external/lib25519-20241004/build/arm64/unified/fe25519cmovS/1/shared/result-compile-fe25519_cmov
fe25519_cmov.S:30:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
